--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/militarydata
+spring.datasource.url=jdbc:postgresql://localhost:5432/poly
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=root
 server.port=8081
