--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/poly
 spring.datasource.username=postgres
 spring.datasource.password=root
 server.port=8081
+
+lpnu.app.jwtSecret = rootr
+lpnu.app.jwtExpirationMs = 86400000
+
+spring.mvc.view.prefix= /
+spring.mvc.view.suffix= .jsp
+spring.messages.basename=validation
