sql filter for request have been already

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.port=8081
 lpnu.app.jwtSecret = rootr
 lpnu.app.jwtExpirationMs = 86400000
 
+spring.jpa.properties.hibernate.metadata_builder_contributor = com.lpnu.poly.type.SqlFunctionsMetadataBuilderContributor
+
 spring.mvc.view.prefix= /
 spring.mvc.view.suffix= .jsp
 spring.messages.basename=validation
